[tool.poetry]
name = "clickupython"
version = "1.0.5"
description = ""
authors = ["Zach Johnson & Robert Mullis Email: imzachjohnson@gmail.com, phoenix.scooter@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.4.2"
typing-extensions = "^4.8.0"
pendulum = "^2.1.2"
timefhuman = {url = "https://github.com/altimore/timefhuman/archive/refs/heads/master.zip"}
word2number = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
